@@ -24,6 +24,7 @@ Version 0.1.5.x:
 15: importVCF: formatFields option added
 16: summary.fa: output corrected, print() removed
 17: summary.fq: output synchronized with summary.fa
+18: summary.fa: added Total length
 
 
 Version 0.1.4 (Stable Version):
